--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "author": {
     "name": "Oleksandr Skyhar"
   },
+  "scripts": {
+    "dev": "n"
+  },
   "version": "1.0",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "nodemon": "^2.0.20"
   }
 }
