--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "name": "Oleksandr Skyhar"
   },
   "scripts": {
-    "dev": "n"
+    "dev": "nodemon app.js"
   },
   "version": "1.0",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
