--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "dev": "echo \"Hello smart\" && nodemon app.js"
   },
-
   "author": {
     "name": "Oleksandr Skyhar"
   },
-
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
@@ -18,6 +16,10 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.7"
   }
 }
