--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 PORT=5000
 MONGO_URL=mongodb://127.0.0.1/june2022
-#ACCESS_SECRET=
-#REFRESH_SECRET=
+
+ACCESS_SECRET=4sE2DvDb3.YVa.0l/CKptIRtMLyphqTfHxLOfftt9WoFq
+REFRESH_SECRET=$2b$10$8dhQ4Aka3gHLSrfIVbX9peqtpUOOCOInDQIa1RZfBM3IKeQQ
+
+NO_REPLY_EMAIL=sashaskyhar@gmail.com
+NO_REPLY_EMAIL_PASSWORD=sfdgadjixgeuzvel
