--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "nodemailer": "^6.8.0",
+    "nodemailer": "^6.9.0",
+    "nodemailer-express-handlebars": "^6.0.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
   },
