--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cron": "^2.2.0",
     "dotenv": "^16.0.3",
     "email-templates": "^10.0.1",
     "express": "^4.18.2",
