--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "email-templates": "^10.0.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
@@ -25,7 +26,8 @@
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
     "swagger-ui-express": "^4.6.0",
-    "twilio": "^3.84.1"
+    "twilio": "^3.84.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.7"
