--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "name": "Oleksandr Skyhar"
   },
   "dependencies": {
-    "aws-sdk": "^2.1296.0",
+    "aws-sdk": "^2.1303.0",
     "bcrypt": "^5.1.0",
     "cron": "^2.2.0",
     "dayjs": "^1.11.7",
@@ -20,11 +20,12 @@
     "express-fileupload": "^1.4.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3",
+    "mongoose": "^6.9.0",
     "nodemailer": "^6.9.0",
     "nodemailer-express-handlebars": "^6.0.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
+    "socket.io": "^4.5.4",
     "swagger-ui-express": "^4.6.0",
     "twilio": "^3.84.1",
     "uuid": "^9.0.0"
